# notable-liberator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
notable_liberator/: cli.py  model.py
